device_firmware/build/log/idf_py_stdout_output_17836
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\perry\Documents\GitHub\EasyDSP\device_firmware\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/build/bootloader/bootloader.bin"
Bootloader binary size 0x5200 bytes. 0x2e00 bytes (36%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/easydsp_firmware.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/easydsp_firmware.c.obj 
ccache C:\Espressif\tools\xtensa-esp32s3-elf\esp-12.2.0_20230208\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/build/config -IC:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32s3 -IC:/esp/esp-idf/components/soc/esp32s3/include -IC:/esp/esp-idf/components/hal/esp32s3/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/include/esp32s3 -IC:/esp/esp-idf/components/esp_rom/esp32s3 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/esp32s3/include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/components/esp_ringbuf/include -IC:/esp/esp-idf/components/efuse/include -IC:/esp/esp-idf/components/efuse/esp32s3/include -IC:/esp/esp-idf/components/driver/include -IC:/esp/esp-idf/components/driver/deprecated -IC:/esp/esp-idf/components/driver/analog_comparator/include -IC:/esp/esp-idf/components/driver/dac/include -IC:/esp/esp-idf/components/driver/gpio/include -IC:/esp/esp-idf/components/driver/gptimer/include -IC:/esp/esp-idf/components/driver/i2c/include -IC:/esp/esp-idf/components/driver/i2s/include -IC:/esp/esp-idf/components/driver/ledc/include -IC:/esp/esp-idf/components/driver/mcpwm/include -IC:/esp/esp-idf/components/driver/parlio/include -IC:/esp/esp-idf/components/driver/pcnt/include -IC:/esp/esp-idf/components/driver/rmt/include -IC:/esp/esp-idf/components/driver/sdio_slave/include -IC:/esp/esp-idf/components/driver/sdmmc/include -IC:/esp/esp-idf/components/driver/sigma_delta/include -IC:/esp/esp-idf/components/driver/spi/include -IC:/esp/esp-idf/components/driver/temperature_sensor/include -IC:/esp/esp-idf/components/driver/touch_sensor/include -IC:/esp/esp-idf/components/driver/twai/include -IC:/esp/esp-idf/components/driver/uart/include -IC:/esp/esp-idf/components/driver/usb_serial_jtag/include -IC:/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/esp/esp-idf/components/esp_pm/include -IC:/esp/esp-idf/components/mbedtls/port/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/library -IC:/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/esp/esp-idf/components/esp_app_format/include -IC:/esp/esp-idf/components/bootloader_support/include -IC:/esp/esp-idf/components/bootloader_support/bootloader_flash/include -IC:/esp/esp-idf/components/esp_partition/include -IC:/esp/esp-idf/components/app_update/include -IC:/esp/esp-idf/components/esp_mm/include -IC:/esp/esp-idf/components/spi_flash/include -IC:/esp/esp-idf/components/pthread/include -IC:/esp/esp-idf/components/esp_timer/include -IC:/esp/esp-idf/components/app_trace/include -IC:/esp/esp-idf/components/esp_event/include -IC:/esp/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/components/esp_phy/include -IC:/esp/esp-idf/components/esp_phy/esp32s3/include -IC:/esp/esp-idf/components/vfs/include -IC:/esp/esp-idf/components/esp_netif/include -IC:/esp/esp-idf/components/wpa_supplicant/include -IC:/esp/esp-idf/components/wpa_supplicant/port/include -IC:/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -IC:/esp/esp-idf/components/esp_coex/include -IC:/esp/esp-idf/components/esp_wifi/include -IC:/esp/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/esp-idf/components/unity/include -IC:/esp/esp-idf/components/unity/unity/src -IC:/esp/esp-idf/components/cmock/CMock/src -IC:/esp/esp-idf/components/console -IC:/esp/esp-idf/components/http_parser -IC:/esp/esp-idf/components/esp-tls -IC:/esp/esp-idf/components/esp-tls/esp-tls-crypto -IC:/esp/esp-idf/components/esp_adc/include -IC:/esp/esp-idf/components/esp_adc/interface -IC:/esp/esp-idf/components/esp_adc/esp32s3/include -IC:/esp/esp-idf/components/esp_adc/deprecated/include -IC:/esp/esp-idf/components/esp_eth/include -IC:/esp/esp-idf/components/esp_gdbstub/include -IC:/esp/esp-idf/components/esp_hid/include -IC:/esp/esp-idf/components/tcp_transport/include -IC:/esp/esp-idf/components/esp_http_client/include -IC:/esp/esp-idf/components/esp_http_server/include -IC:/esp/esp-idf/components/esp_https_ota/include -IC:/esp/esp-idf/components/esp_psram/include -IC:/esp/esp-idf/components/esp_lcd/include -IC:/esp/esp-idf/components/esp_lcd/interface -IC:/esp/esp-idf/components/protobuf-c/protobuf-c -IC:/esp/esp-idf/components/protocomm/include/common -IC:/esp/esp-idf/components/protocomm/include/security -IC:/esp/esp-idf/components/protocomm/include/transports -IC:/esp/esp-idf/components/esp_local_ctrl/include -IC:/esp/esp-idf/components/espcoredump/include -IC:/esp/esp-idf/components/espcoredump/include/port/xtensa -IC:/esp/esp-idf/components/wear_levelling/include -IC:/esp/esp-idf/components/sdmmc/include -IC:/esp/esp-idf/components/fatfs/diskio -IC:/esp/esp-idf/components/fatfs/vfs -IC:/esp/esp-idf/components/fatfs/src -IC:/esp/esp-idf/components/idf_test/include -IC:/esp/esp-idf/components/idf_test/include/esp32s3 -IC:/esp/esp-idf/components/ieee802154/include -IC:/esp/esp-idf/components/json/cJSON -IC:/esp/esp-idf/components/mqtt/esp-mqtt/include -IC:/esp/esp-idf/components/perfmon/include -IC:/esp/esp-idf/components/spiffs/include -IC:/esp/esp-idf/components/touch_element/include -IC:/esp/esp-idf/components/ulp/ulp_common/include -IC:/esp/esp-idf/components/ulp/ulp_common/include/esp32s3 -IC:/esp/esp-idf/components/usb/include -IC:/esp/esp-idf/components/wifi_provisioning/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/easydsp_firmware.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\easydsp_firmware.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/easydsp_firmware.c.obj -c C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main/easydsp_firmware.c
C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main/easydsp_firmware.c:11:20: warning: 'TAG' defined but not used [-Wunused-variable]
   11 | static const char *TAG = "Main";
      |                    ^~~
C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main/easydsp_firmware.c: In function 'task_one':
C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main/easydsp_firmware.c:30:39: error: 'dataStore' may be used uninitialized [-Werror=maybe-uninitialized]
   30 |         printf("Data: %d\n", dataStore[i]);
      |                              ~~~~~~~~~^~~
C:/Users/perry/Documents/GitHub/EasyDSP/device_firmware/main/easydsp_firmware.c:18:13: note: 'dataStore' declared here
   18 |     uint8_t dataStore[5];
      |             ^~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
